--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Remove existing .DS_Store files from Git's index
+git rm --cached .DS_Store
+git rm --cached **/.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
