--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ scipy==1.10.1
 # Machine Learning
 scikit-learn==1.2.2
 xgboost==2.0.0
-lightgbm==4.0.0
+# lightgbm==4.0.0  # Commented out until build dependencies are set up
 
 # Causal Inference
 statsmodels==0.14.0
