--- a/ds_techniques/.gitignore
+++ b/ds_techniques/.gitignore
@@ -1,6 +1,6 @@
 # Remove existing .DS_Store files from Git's index
-git rm --cached .DS_Store
-git rm --cached **/.DS_Store
+.DS_Store
+**/.DS_Store
 
 # Jupyter
 .ipynb_checkpoints
