--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # Remove existing .DS_Store files from Git's index
+.DS_Store
+.gitignore
 git rm --cached .DS_Store
 git rm --cached **/.DS_Store
 
